# tiger

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  screwdriver.yaml  server.py
.github/: pull_request_template.md
.github/workflows/: ci-cd.yml
docs/: architecture.drawio  component-diagram.drawio  deployment.drawio
flask_ws/speechrecognition/: README.md  __init__.py  test__init__.py
hashicorp/: README.md
hashicorp/images/: aws-base.pkr.hcl  aws-nexusgraph.pkr.hcl  aws-public.pkr.hcl  aws-theresa-hanlp-ner.pkr.hcl  aws-theresa.pkr.hcl  nginx-nexusgraph-ssl.conf  nginx-public.conf  nginx-ssl-dev.conf  nginx-ssl-prod.conf  nginx-ssl-public.conf  settings.cfg  theresa.auto.pkrvars.hcl  variables.pkr.hcl
hashicorp/images/asr-test/: certbot.output  custom.conf  fullchain.pem  nginx.conf  privkey.pem  setup.sh  test-model-asr.pkr.hcl  timeout.conf
hashicorp/instances/: aws-base.tf  aws-nexusgraph.tf  aws-public.tf  aws-theresa-hanlp-ner.tf  base.tf  main.tf  nexusgraph.auto.tfvars  nexusgraph.tf  public.tf  theresa.auto.tfvars
hashicorp/instances/asr-test/: start.sh  test-model-asr.tf
hashicorp/scripts/: aws-base-pkr-setup.sh  aws-base-tf-init.sh  aws-nexusgraph-pkr-setup.sh  aws-theresa-hanlp-ner-setup.sh  aws-theresa-hanlp-ner-tf-init.sh  base-setup.sh  nexusgraph-setup.sh  public-setup.sh  setup.sh
hiring/BIG5/: README.md  calculate_model.py
img/: flask-speechrecognition.drawio  frontend-dev-design.drawio
mlflow_models/HanLPner/: HanLPner.py  README.md  parser.py  requirements.txt  test_parser.py
mlflow_models/ancient-greek-text-to-speech/: README.md  Xenophon-Oeconomicus-L168.txt  convert.py  original.txt
mlflow_models/planner/: Planner.py
mlflow_models/whisper/: README.md
test_models/asr/: README.md  __init__.py  requirements.txt  test__init__.py
tests/: conftest.py  settings.test.cfg  test_common.py  test_smoke.py
tests/entity_extraction/: test-rapid-api.input.json  test-rapid-api.output.json  test_graph_gpt.py  test_hanlp_ner.py  test_rapid_api.py
tests/neo4j/: neo4j-export.json  test_json_parser.py
theresa/: __init__.py  common.py
theresa/entity_extraction/: graph_gpt.py  hanlp_ner.py  rapid_api.py
theresa/expand/: google_knowledge_graph_api.py
theresa/image/: similarity.py
theresa/neo4j/: json_parser.py
(+7 files in other folders)
