[project]
name = "theresa"
version = "0.0.1"
description = "Machine Learning Webservice"
readme = "README.md"
maintainers = [{name = "Jiaqi Liu", email = "jack20220723@gmail.com"}]
dependencies = [
    "flask",
    "gunicorn",
    "flasgger == 0.9.7b2",
    "requests",
    "flask-cors",

    "hanlp"
]

[tool.setuptools.packages.find]
exclude = ["hashicorp"] # https://stackoverflow.com/a/75390679

[project.urls]
Documentation = "https://flask.palletsprojects.com/tutorial/"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["theresa", "tests"]
